Added clear and reset grid button

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     </header>
     <body>
         <h1>ETCH-A-SKETCH</h1>
+        <div>
+            <button id="clear-btn">Clear</button>
+        </div>
         <div class="grid-container" id="draw-pad">
         </div>
     </body>
